--- a/Application/src/main/res/values/base-strings.xml
+++ b/Application/src/main/res/values/base-strings.xml
@@ -21,7 +21,11 @@
         <![CDATA[
         
             
-            This application is used to control our tank for E E 474.
+            This application is used to control our tank for E E 474. \n
+\n
+           App Designed By Vishesh Sood \n
+\n
+           Team: Erin, Laila, Vishesh
             
         
         ]]>
